--- a/login/index.html
+++ b/login/index.html
@@ -121,8 +121,8 @@
     <h1 class="title">El Código de la Persuasión</h1>
 
     <form onsubmit="handleLogin(event)">
-      <p class="note" style="margin-bottom: 4px;">
-        *Mismo email que usaste en la compra.
+      <p class="note" style="margin-bottom: 3px;">
+        *Mismo Email que usaste en la compra.
       </p>
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
