--- a/login/index.html
+++ b/login/index.html
@@ -144,7 +144,7 @@
       const email = document.getElementById('email').value.trim();
       if(email){
         localStorage.setItem('userEmail', email);
-        window.location.href = '/login';
+        window.location.href = '/login/areamember';
       }
     }
 
