--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -306,7 +306,7 @@ button:hover, a:hover {
 
   <div class="flex items-center justify-between mb-4">
     <h2 class="text-lg font-bold">🎁 Bonos Exclusivos</h2>
-    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07] mt-1">⭠</button>
+    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07] mt-1">◀</button>
   </div>
    <p class="text-white/70 text-sm mb-4">Aprovecha este contenido extra con grandes enseñanzas.</p>
 <div class="grid grid-cols-1 gap-3">
@@ -332,7 +332,7 @@ button:hover, a:hover {
 <section id="librosSection" class="max-w-4xl mx-auto px-4 pb-10 hidden">
   <div class="flex items-center justify-between mb-4">
     <h2 class="text-lg font-bold">📚 Libros Prohibidos</h2>
-    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07] mt-1">⭠</button>
+    <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07] mt-1">◀</button>
   </div>
 
   <p class="text-white/70 text-sm mb-4">Estos son los libros más poderosos sobre el tema de neurociencia y persuasión.</p>
