--- a/login/areamember/index.html
+++ b/login/areamember/index.html
@@ -417,10 +417,7 @@ button:hover, a:hover {
   <section id="audiobook" class="max-w-4xl mx-auto px-4 pb-10 hidden">
     <div class="flex items-center justify-between mb-4">
       <h2 class="text-lg font-bold">🔊 Audiobook — Código de la Persuasión</h2>
-      <button onclick="backToHome()"
-              class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07]">
-   ←
-      </button>
+      <button onclick="backToHome()" class="text-sm px-3 py-2 rounded-xl border border-white/15 bg-white/[.04] hover:bg-white/[.07]">←</button>
     </div>
 
     <p class="text-white/70 text-sm mb-4">
