--- a/login2/index.html
+++ b/login2/index.html
@@ -906,21 +906,9 @@ async function handleLogin(e) {
   if (!email) return;
 
   try {
-    const res = await fetch('https://projeto360.site/hotmart/check_email.php', {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-      body: 'email=' + encodeURIComponent(email)
-    });
-
-    const text = await res.text(); // Lê a resposta bruta primeiro
-    let data;
-
-    try {
-      data = JSON.parse(text); // Tenta converter pra JSON
-    } catch {
-      console.warn('Resposta bruta do servidor:', text);
-      data = { ok: false, allowed: false }; // fallback se não for JSON
-    }
+    // Faz a requisição com GET
+    const res = await fetch(`https://projeto360.site/hotmart/check_email.php?email=${encodeURIComponent(email)}`);
+    const data = await res.json();
 
     if (data.ok && data.allowed) {
       localStorage.setItem('userEmail', email);
@@ -928,9 +916,8 @@ async function handleLogin(e) {
     } else {
       alert('❌ Email no encontrado. Usa el mismo email que utilizaste en la compra.');
     }
-
   } catch (err) {
-    console.error('Erro ao verificar o email:', err);
+    console.error('Erro ao verificar el email:', err);
     alert('⚠️ Error al verificar el email. Intenta nuevamente.');
   }
 }
