--- a/login2/index.html
+++ b/login2/index.html
@@ -219,6 +219,30 @@ button:hover, a:hover {
 }
 
 
+
+/* Botão Instalar App */
+.install-btn {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 6px 16px;
+  font-size: 0.9rem;
+  font-weight: 600;
+  color: #ff7a00;
+  border: 2px solid #ff7a00;
+  border-radius: 8px;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+
+.install-btn:hover {
+  background: #ff7a00;
+  color: #000;
+  box-shadow: 0 0 10px #ff7a00aa;
+  transform: translateY(-1px);
+}
+
+
 /* Texto Instalar App */
 .install-text {
   margin-top: 1.3rem;
@@ -272,7 +296,7 @@ button:hover, a:hover {
       </p>
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
-      <p id="installText" class="install-text">📲 Instalar App</p>
+      <button id="installText" type="button" class="install-btn">📲 Instalar App</button>
     </form>
   </div>
 </div>
