--- a/login2/index.html
+++ b/login2/index.html
@@ -219,27 +219,28 @@ button:hover, a:hover {
 }
 
 
-
-/* Botão Instalar App */
+/* Botão Instalar App — versão minimalista */
 .install-btn {
-  margin-top: 1rem;
+  margin-top: 0.8rem;
   display: inline-block;
-  padding: 6px 16px;
-  font-size: 0.9rem;
-  font-weight: 600;
-  color: #ff7a00;
-  border: 2px solid #ff7a00;
-  border-radius: 8px;
+  padding: 4px 10px;
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: #ff8800;
+  border: 1px solid #ff8800;
+  border-radius: 6px;
   background: transparent;
   cursor: pointer;
+  opacity: 0.8;
   transition: all 0.25s ease;
 }
 
 .install-btn:hover {
-  background: #ff7a00;
-  color: #000;
-  box-shadow: 0 0 10px #ff7a00aa;
+  opacity: 1;
+  border-color: #ffae00;
+  color: #ffae00;
   transform: translateY(-1px);
+  box-shadow: 0 0 6px #ffae0066;
 }
 
 
