--- a/login2/index.html
+++ b/login2/index.html
@@ -219,19 +219,19 @@ button:hover, a:hover {
 }
 
 
-/* Botão Instalar App — versão minimalista */
+/* Botão Instalar App — versão minimalista e vazada */
 .install-btn {
-  margin-top: 0.8rem;
+  margin-top: 0.6rem;
   display: inline-block;
-  padding: 4px 10px;
-  font-size: 0.75rem;
+  padding: 3px 8px;
+  font-size: 0.7rem;
   font-weight: 500;
-  color: #ff8800;
-  border: 1px solid #ff8800;
+  color: #ff8c00;
+  border: 0.8px solid #ff8c00;
   border-radius: 6px;
   background: transparent;
   cursor: pointer;
-  opacity: 0.8;
+  opacity: 0.7;
   transition: all 0.25s ease;
 }
 
@@ -240,9 +240,9 @@ button:hover, a:hover {
   border-color: #ffae00;
   color: #ffae00;
   transform: translateY(-1px);
-  box-shadow: 0 0 6px #ffae0066;
+  box-shadow: 0 0 5px #ffae0066;
+  background: transparent !important; /* garante que não preenche nunca */
 }
-
 
 /* Texto Instalar App */
 .install-text {
