--- a/login2/index.html
+++ b/login2/index.html
@@ -251,37 +251,6 @@ button:hover, a:hover {
   border-radius: 1rem;
   box-shadow: 0 0 20px rgba(255,255,255,0.2);
 }
-
-
-
-
-
-
-/* Novo botão Instalar App — pequeno, transparente e com borda amarela */
-.btn-install {
-  margin-top: 0.6rem;
-  background: transparent !important;
-  border: 0.8px solid #ffcc00;   /* borda amarela fina */
-  color: #ffcc00;
-  font-size: 0.68rem;
-  font-weight: 500;
-  padding: 3px 10px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: all 0.25s ease;
-  opacity: 0.8;
-  width: auto;
-  display: inline-block;
-}
-
-.btn-install:hover {
-  opacity: 1;
-  border-color: #ffe766;
-  color: #ffe766;
-  box-shadow: 0 0 5px #ffe76655;
-  transform: translateY(-1px);
-  background: transparent !important; /* garante que nunca preencha */
-}
   </style>
 
   
@@ -303,7 +272,7 @@ button:hover, a:hover {
       </p>
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
-      <button id="installText" type="button" class="btn-install">Instalar App</button>
+      <p id="installText" class="install-text">📲 Instalar App</p>
     </form>
   </div>
 </div>
