--- a/login2/index.html
+++ b/login2/index.html
@@ -221,7 +221,7 @@ button:hover, a:hover {
 
 /* Texto Instalar App */
 .install-text {
-  margin-top: 1.3rem;
+  margin-top: 1rem;
   color: #ff7a00;
   font-weight: bold;
   cursor: pointer;
@@ -272,7 +272,7 @@ button:hover, a:hover {
       </p>
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
-      <p id="installText" class="install-text">📲 Instalar App</p>
+      <p id="installText" class="install-text">Instalar App</p>
     </form>
   </div>
 </div>
