--- a/login2/index.html
+++ b/login2/index.html
@@ -272,7 +272,7 @@ button:hover, a:hover {
       </p>
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
-      <p id="installText" class="install-text">Instalar App</p>
+      <p id="installText" class="install-text"><u>Instalar App</u></p>
     </form>
   </div>
 </div>
