--- a/login2/index.html
+++ b/login2/index.html
@@ -226,7 +226,7 @@ button:hover, a:hover {
   font-weight: bold;
   cursor: pointer;
   text-shadow: 0 0 10px #ff7a00, 0 0 20px #ff7a00;
-  
+  animation: glow 2s ease-in-out infinite alternate;
   display: inline-block;
 }
 
@@ -272,7 +272,7 @@ button:hover, a:hover {
       </p>
       <input type="email" id="email" placeholder="usuario@email.com" required>
       <button type="submit">Entrar</button>
-      <p id="installText" class="install-text"><u>Instalar App</u></p>
+      <p id="installText" class="install-text">Instalar App</p>
     </form>
   </div>
 </div>
