--- a/login2/index.html
+++ b/login2/index.html
@@ -980,7 +980,6 @@ document.addEventListener('keydown', e => {
 
 </script>
 
-
 <script>
 async function handleLogin(e) {
   e.preventDefault();
@@ -989,7 +988,7 @@ async function handleLogin(e) {
 
   try {
     // Faz a requisição com GET
-    const res = await fetch(`https://abacate.infinityfreeapp.com/hotmart/check_email.php?email=${encodeURIComponent(email)}`);
+    const res = await fetch(`hotmart-webhook-42ya.onrender.com/check_email.php?email=${encodeURIComponent(email)}`);
     const data = await res.json();
 
     if (data.ok && data.allowed) {
