--- a/login2/index.html
+++ b/login2/index.html
@@ -998,7 +998,7 @@ async function handleLogin(e) {
 
   try {
     // Faz a requisição para o PHP no InfinityFree
-    const res = await fetch(`https://projeto360.site/hotmart/check_email.php?email=${encodeURIComponent(email)}`);
+    const res = await fetch(`https://hotmart-webhook-42ya.onrender.com/check_email.php?email=${encodeURIComponent(email)}`);  
     const data = await res.json();
 
     if (data.ok && data.allowed) {
